--- a/style.css
+++ b/style.css
@@ -1,15 +1,38 @@
+body{
+    margin:50px;
+}
+h1{
+    text-align: center;
+}
+form{
+    text-align: center;
+}
 .container-tower{
-   display: flex; 
+    display: flex; 
     flex-direction: row;
     align-items: flex-end;
     border: 2px solid black;
     min-height: 500px;
     justify-content: space-around;
+    margin: 10px;
 }
 .towers{
     width : 1em;
     height: 250px;
     border: 1px solid black;
     background-color: aqua;
+    justify-content: flex-start;
+    display:flex;
+    flex-direction: column-reverse;
+    align-items: center;
+    position:relative;
 }
 
+.discs{
+    border: 2px solid black;
+    width:100px;
+    height:40px;
+    border-radius: 30%;
+    flex-shrink: 0;
+    margin-bottom: 0px;
+}
